--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@mui/material": "^5.14.16",
     "@preact/signals-react": "^1.3.6",
+    "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.17.0",
     "react-toastify": "^9.1.3",
-    "typewriter-effect": "^2.21.0"
+    "recharts": "^2.9.2",
+    "typewriter-effect": "^2.21.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
